# intelli-source

./: .dockerignore  .gitattributes  .gitignore  .vulture_whitelist.py  AGENTS.md  CLAUDE.md  Makefile  README.md  intellisource-spec.md  pyproject.toml
.cataforge/: .deploy-manifest.json  .instruction-hashes.json  .scaffold-manifest.json  PROJECT-STATE.md  framework.json
.cataforge/.archive/: NAV-INDEX-20260503T050823Z.md
.cataforge/kg/: perf-budget.json
.cataforge/schemas/: agent-result.schema.json
.claude/: compat-matrix.json  rules  settings.json  settings.local.json  skills  upgrade-source.json
.claude/agents/: architect.md  debugger.md  devops.md  implementer.md  orchestrator.md  product-manager.md  qa-engineer.md  refactorer.md  reflector.md  reviewer.md  tech-lead.md  test-writer.md  ui-designer.md
.claude/hooks/: guard_dangerous.py  lint_format.py  log_agent_dispatch.py  notify_done.py  notify_permission.py  notify_util.py  session_context.py  validate_agent_result.py
.claude/rules/: COMMON-RULES.md  ORCHESTRATOR-PROTOCOLS.md  SUB-AGENT-PROTOCOLS.md
.claude/schemas/: event-log.schema.json
.claude/scripts/: event_logger.py  phase_reader.py  setup-penpot-mcp.sh  setup.py  upgrade.py
.claude/skills/: agent-dispatch  arc-design  change-guard  code-review  debug  deploy-config  doc-gen  doc-nav  doc-review  framework-feedback  framework-review  penpot-implement  penpot-review  penpot-sync  platform-audit  req-analysis  research  self-update  sprint-review  start-orchestrator  task-decomp  task-dep-analysis  tdd-engine  tech-eval  testing  ui-design  workflow-framework-generator
.github/workflows/: arch-graph.yml  ci.yml  publish-images.yml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_schema.py  62f6b6bf5177_add_timezone_and_discipline_tags.py  a1b2c3d4e5f6_add_raw_content_status_processed_at.py  a2b3c4d5e6f7_rename_truncate_summary_tool.py  a7b8c9d0e1f2_add_subscription_last_sent_at.py  b2c3d4e5f6a7_add_push_record_recipient_id.py  b8c9d0e1f2a3_add_push_record_render_mode.py  c3d4e5f6a7b8_add_config_versions.py  c9d0e1f2a3b4_add_pipeline_definitions.py  d0e1f2a3b4c5_add_templates.py  d4e5f6a7b8c9_add_subscription_config_versions.py  e1f2a3b4c5d6_add_collect_task_celery_id.py  e5f6a7b8c9d0_ensure_zhparser_text_search.py  f6a7b8c9d0e1_add_processed_content_discipline_tags.py  g0h1i2j3k4l5_resize_embedding_dim_1536_to_1024.py
config/: README.md  defaults.yaml  llm_models.example.yaml  llm_models.yaml  sources.example.yaml  subscriptions.example.yaml
config/examples/: README.md  llm_models.example.yaml  sources.example.yaml  subscriptions.example.yaml
config/pipelines/: README.md  admin-agent.yaml  content-process.yaml  instant-search.yaml  manual-collect.yaml  push-optimize.yaml  scheduled-collect.yaml
config/schema/: llm_models.schema.json  pipeline.schema.json  sources.schema.json  subscriptions.schema.json
config/sources/: README.md  sources.yaml
config/subscriptions/: README.md  subscriptions.yaml
config/templates/: README.md
docker/: .env.example  Dockerfile  db.Dockerfile  docker-compose.gpu.yml  docker-compose.registry.yml  docker-compose.yml  intellisource.service
docker/prometheus/: alerts.yml  prometheus.yml
docs/: .doc-index.json  BACKLOG-intellisource-v1.md  EVENT-LOG.jsonl  HISTORY-intellisource-v1.md  NAV-INDEX.md
docs/arch/: arch-intellisource-v1-api.md  arch-intellisource-v1-data.md  arch-intellisource-v1-modules.md  arch-intellisource-v1.md
docs/changelog/: changelog-intellisource-v1.md
docs/deploy/: PRE-DEPLOY-WALKTHROUGH.md  remote-host-readiness.md
docs/deploy-spec/: deploy-spec-intellisource-v1.md
docs/dev-plan/: dev-plan-intellisource-v1-s1.md  dev-plan-intellisource-v1-s10.md  dev-plan-intellisource-v1-s2.md  dev-plan-intellisource-v1-s3.md  dev-plan-intellisource-v1-s4.md  dev-plan-intellisource-v1-s5.md  dev-plan-intellisource-v1-s6.md  dev-plan-intellisource-v1-s7.md  dev-plan-intellisource-v1-s7r.md  dev-plan-intellisource-v1-s8.md  dev-plan-intellisource-v1-s8r.md  dev-plan-intellisource-v1-s9.md  dev-plan-intellisource-v1.md
docs/feedback/: bug-kg-completeness-findings-20260623.md  bug-upgrade-clobbers-kg-store-20260622.md  feedback-bug-eventlog-session-end-20260505.md  feedback-suggest-framework-batch-20260529.md  feedback-suggest-kg-dangling-scan-relation-only-persists-20260616.md  feedback-suggest-kg-ingest-gate-legacy-docs-20260612.md  feedback-suggest-reflector-frontmatter-20260505.md  suggest-claude-md-state-bloat-20260623.md
docs/prd/: prd-intellisource-v1.md
docs/research/: architecture-review-opencode-benchmark.md  b032-pgvector-zhparser-image-options.md  b050-wechat-vs-wework-audit.md  b051-config-bootstrap-ux.md  prompt-management-analysis.md
docs/reviews/: CORRECTIONS-LOG.md
docs/test-report/: test-report-intellisource-v1.md
scripts/: contract_check.py  gen_config_schemas.py  provision-remote.sh
src/intellisource/: composition.py  main.py  mcp_server.py
tests/: conftest.py  source_scan.py
tests/integration/: conftest.py  test_beat_schedule_registered.py  test_celery_singleton_unified.py  test_celery_worker_wiring.py  test_chat_session_persistence.py  test_cli_pipeline_list.py  test_collect_process_persistence_chain.py  test_collect_tool_not_degraded.py  test_composition_wires_webhook_state.py  test_distribute_writes_push_record.py  test_llm_gateway_lifespan.py  test_periodic_digest_runner.py  test_pg_fixtures.py  test_pg_vector_search.py  test_pipeline_collect_process_distribute_e2e.py  test_process_tool_executes_real_processors.py  test_raw_content_persist_on_pipeline_done.py  test_s8r_coldstart.py  test_s8r_config_hotreload.py  test_s8r_push_record.py  test_s8r_quiet_hours.py  test_s8r_search_pg.py  test_search_chat_stream_uses_rag.py  test_search_chat_uses_flexible_mode.py  test_sprint7_integration.py  test_sprint8_integration.py  test_system_health_real.py  test_webhook_triggers_cs_callback.py  test_worker_pipeline_no_crash.py
tests/unit/: conftest.py  test_b051_startup_checks.py  test_composition.py  test_main_lifespan.py  test_mcp_server.py  (+1 more)
(+870 files in other folders)
