[project]
name = "intellisource"
version = "0.3.0"
description = "AI-powered intelligent information aggregation and distribution platform"
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "litellm>=1.0",
    "structlog>=24.1",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "alembic>=1.13",
    "pgvector>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "opentelemetry-api>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intellisource"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["intellisource"]
mypy_path = "src"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
