[project]
name = "intellisource"
version = "0.4.6"
description = "AI-powered intelligent information aggregation and distribution platform"
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "litellm>=1.0",
    "tenacity>=8.0",
    "structlog>=24.1",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "alembic>=1.13",
    "pgvector>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "opentelemetry-api>=1.20",
    "watchfiles>=1.1.1",
    "aioredis>=2.0.1",
    "regex>=2024.5.10",
    "aiosmtplib>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "testcontainers[postgres]>=4.0",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intellisource"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-q --tb=short --timeout=120 -m 'not slow'"
asyncio_mode = "auto"
markers = [
    "requires_docker: tests requiring a local Docker daemon (e.g. testcontainers PG); skipped automatically when Docker is unavailable",
    "slow: subprocess, install dry-run, or file-watcher polling; excluded from default runs (see CI lint job for ruff/mypy)",
]
filterwarnings = [
    "ignore:Exception ignored while finalizing coroutine.*AsyncMockMixin._execute_mock_call:pytest.PytestUnraisableExceptionWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "ignore:Exception ignored while calling deallocator.*Connection\\.__del__:pytest.PytestUnraisableExceptionWarning",
    "ignore:.*aiosqlite\\.core\\.Connection.*was deleted before being closed:ResourceWarning",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
extend-exclude = [
    ".cataforge",
    ".claude/hooks",
    ".claude/scripts",
    ".claude/skills",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["intellisource"]
mypy_path = "src"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.vulture]
ignore_names = [
    "names",
    "a",
    "kw",
]
paths = ["src/intellisource"]
exclude = ["tests/"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "testcontainers[postgres]>=4.0",
    "psycopg[binary]>=3.1",
    "pytest-timeout>=2.4.0",
    "asyncpg>=0.31.0",
]
