[project]
name = "intellisource"
version = "0.4.6"
description = "AI-powered intelligent information aggregation and distribution platform"
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "litellm>=1.0",
    "tenacity>=8.0",
    "structlog>=24.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "starlette>=0.36",
    "jsonschema>=4.20",
    "kombu>=5.3",
    "typer>=0.9",
    "alembic>=1.13",
    "pgvector>=0.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "opentelemetry-api>=1.20",
    "watchfiles>=1.1.1",
    "aioredis>=2.0.1",
    "regex>=2024.5.10",
    "aiosmtplib>=5.1.0",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.1",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
intellisource = "intellisource.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intellisource"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-q --tb=short --timeout=120 -m 'not slow'"
asyncio_mode = "auto"
markers = [
    "requires_docker: tests requiring a local Docker daemon (e.g. testcontainers PG); skipped automatically when Docker is unavailable",
    "slow: subprocess, install dry-run, or file-watcher polling; excluded from default runs (see CI lint job for ruff/mypy)",
]
filterwarnings = [
    # AsyncMock.__del__ triggers unraisable coroutine warnings on Python 3.11+
    # when mock objects are garbage-collected mid-test. Already scoped to the
    # specific internal method; not masking real resource leaks (conftest
    # fixtures use explicit teardown).
    "ignore:Exception ignored while finalizing coroutine.*AsyncMockMixin._execute_mock_call:pytest.PytestUnraisableExceptionWarning",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    # aiosqlite Connection.__del__ fires when an in-memory SQLite connection is
    # collected before close() is called; scoped to the aiosqlite deallocator path.
    "ignore:Exception ignored while calling deallocator.*Connection\\.__del__:pytest.PytestUnraisableExceptionWarning",
    "ignore:.*aiosqlite\\.core\\.Connection.*was deleted before being closed:ResourceWarning",
    # A per-function loop from a test double / pytest-asyncio can be GC-collected
    # before close() on Python 3.11, surfacing under whichever test GC happens to
    # run in. Production loops are always closed (asyncio.run, or boot.py's
    # explicit finally: loop.close()), so this is teardown noise, not a leak.
    "ignore:unclosed event loop:ResourceWarning",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
extend-exclude = [
    ".cataforge",
    ".claude/hooks",
    ".claude/scripts",
    ".claude/skills",
]

[tool.ruff.lint]
# PLW1514 (unspecified-encoding) machine-enforces the UTF-8 encoding contract:
# every text-mode open/read_text/write_text must pass encoding= explicitly, so a
# locale-dependent default can never slip in. It is a ruff preview rule, scoped
# in via explicit-preview-rules so no other unstable preview rule activates.
preview = true
explicit-preview-rules = true
select = ["E", "F", "I", "N", "W", "PLW1514"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["intellisource"]
mypy_path = "src"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Pyright / Pylance (IDE / LSP only — mypy --strict is the CI source-of-truth
# for type errors; ruff F401/F841 owns unused-detection in CI). This config
# tunes Pyright down to a complementary role and suppresses the false-positive
# patterns observed on this codebase:
#   * Agent tool registry execute functions registered dynamically by name
#     (`_*_execute` look "unused" but are dispatched via name lookup).
#   * `**kwargs: Any` on tool execute functions — required to absorb arbitrary
#     LLM-emitted fields without crashing dispatch.
#   * SQLAlchemy event.listen / dialect compiler callbacks must accept
#     framework-defined params (`connection_record`, `type_`) by signature.
#   * pytest fixtures consumed for DI side-effect (`mock_session`,
#     `mock_subscription`) where Pyright cannot follow fixture resolution.
#   * MagicMock-driven test code with intentionally dynamic attribute access.
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".cataforge",
    ".claude/hooks",
    ".claude/scripts",
    ".claude/skills",
    ".venv",
    "build",
    "dist",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "basic"

# Defer to ruff (CI) for unused-symbol detection — Pyright cannot see
# registry-registered or fixture-injected uses, producing high FP rate.
reportUnusedImport = "none"
reportUnusedClass = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"

# Defer to mypy --strict (CI) for inferred-type-unknown warnings; these
# overlap with mypy's own missing-annotation reporting and add noise.
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportMissingParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportMissingTypeArgument = "none"

# KEEP these — they catch real bugs that mypy / ruff do not:
#   * reportUnusedExpression caught a B-058 RED test bug where
#     `mock.assert_awaited_once(), ("msg")` was silently parsed as a tuple,
#     letting the assertion failure be swallowed.
#   * reportUnusedCoroutine catches dangling awaitables (a common asyncio bug).
reportUnusedExpression = "warning"
reportUnusedCoroutine = "warning"

# tests/ uses MagicMock with dynamic attributes + private internals
# legitimately; relaxing per-directory rather than globally so src/ keeps
# stricter analysis.
[[tool.pyright.executionEnvironments]]
root = "tests"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportPrivateUsage = "none"

[tool.vulture]
# Dead code detection.
# Run: uv run vulture
# Extend the allowlist with: uv run vulture --make-whitelist >> .vulture_whitelist.py
min_confidence = 80              # Below this, vulture is too noisy to be useful
sort_by_size = true
paths = ["src/intellisource", ".vulture_whitelist.py"]
exclude = ["tests/", "**/migrations/**"]
ignore_names = [
    # Generic loop/throwaway identifiers (false positives)
    "names",
    "a",
    "kw",
    # FastAPI / Pydantic dependency-injection markers and aliased parameters
    "model_config",
    "Config",
]
ignore_decorators = [
    "@router.*",                 # FastAPI endpoint handlers
    "@app.*",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@staticmethod",
    "@classmethod",
    "@property",
    "@*.setter",
]

# ---------------------------------------------------------------------------
# Dependency hygiene (deptry)
# Run: uv run deptry src/
# Docs: https://deptry.com/
# ---------------------------------------------------------------------------
[tool.deptry]
extend_exclude = [
    "tests/.*",
    "docs/.*",
    "alembic/.*",
    ".cataforge/.*",
    ".claude/.*",
]
# Per-rule overrides (DEP001-DEP004 are deptry's rule codes).
# Document each entry with the reason so future maintainers can re-evaluate.
[tool.deptry.per_rule_ignores]
# DEP002: package declared but never imported (e.g. transitive runtime needs
# that get loaded by another package rather than direct import).
DEP002 = [
    "asyncpg",                   # async PG driver; SQLAlchemy resolves the dialect via URL
    "psycopg",                   # sync PG driver alternative; tests use it for DDL
    "pgvector",                  # registers SQLAlchemy types side-effectfully
    "alembic",                   # CLI tool, not imported at runtime by intellisource.*
    "aioredis",                  # alias of redis.asyncio in older code paths
    "regex",                     # imported by litellm internals; pinned for compatibility
    "opentelemetry-api",         # imported only when OTEL_*_ENABLED env vars are set
    "lxml",                      # parser backend for beautifulsoup4
    "uvicorn",                   # ASGI server invoked as CLI in docker compose; never `import uvicorn`
]

# ---------------------------------------------------------------------------
# pydeps (manual / nightly visualization)
# Run: uv run pydeps src/intellisource --max-bacon=2 --cluster -o docs/arch/deps.svg
# Docs: https://pydeps.readthedocs.io/
# ---------------------------------------------------------------------------
[tool.pydeps]
# pydeps reads CLI flags, but [tool.pydeps] keys also work via --config.
max_bacon = 2
cluster = true
exclude = ["intellisource.*.tests.*"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "mypy>=1.20.0",
    "ruff>=0.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "types-pyyaml>=6.0.12.20250915",
    "testcontainers[postgres]>=4.0",
    "psycopg[binary]>=3.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6",
    "asyncpg>=0.31.0",
    # Architecture governance toolchain
    "import-linter>=2.11",      # Architecture contracts (CI-blocking)
    "deptry>=0.20",             # Dependency hygiene (CI-blocking)
    "vulture>=2.13",             # Dead code detection (CI-soft / pre-commit)
    "pydeps>=3.0",               # Dependency graph visualization (manual / nightly)
]

# ---------------------------------------------------------------------------
# Architecture governance (import-linter)
# Run: uv run lint-imports --no-cache
# Docs: https://import-linter.readthedocs.io/
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["intellisource"]
include_external_packages = false

# Contract 1: Top-down layered architecture.
# Siblings on the same row (' | ') are forbidden from importing each other.
# observability / config / core are cross-cutting and intentionally NOT in
# this stack -- they can be depended on by any layer above.
[[tool.importlinter.contracts]]
name = "Layered architecture (top-down)"
type = "layers"
layers = [
    "main | cli",
    "api",
    "composition",
    "agent",
    "pipeline | collector | search | distributor | scheduler",
    "llm",
    "storage",
]
containers = ["intellisource"]
exhaustive = false
ignore_imports = [
    "intellisource.scheduler.boot -> intellisource.composition",
    "intellisource.scheduler.beat_sync -> intellisource.composition",
    "intellisource.agent.factory -> intellisource.composition",
]

# Contract 2: Sprint 6 red line -- pipeline must NOT call LLM directly.
# LLM calls go through agent.tools.executes.llm.llm_complete.
[[tool.importlinter.contracts]]
name = "Pipeline must not call LLM directly (Sprint 6 contract)"
type = "forbidden"
source_modules = ["intellisource.pipeline"]
forbidden_modules = ["intellisource.llm"]

# Contract 3: Collector must never reach LLM or agent.
[[tool.importlinter.contracts]]
name = "Collector is pure I/O, no LLM or agent dependency"
type = "forbidden"
source_modules = ["intellisource.collector"]
forbidden_modules = ["intellisource.llm", "intellisource.agent"]

# Contract 4: LLM gateway must not depend upward.
# Flushes out reverse deps such as llm/processors/* -> pipeline.
[[tool.importlinter.contracts]]
name = "LLM gateway must not depend upward on higher layers"
type = "forbidden"
source_modules = ["intellisource.llm"]
forbidden_modules = [
    "intellisource.pipeline",
    "intellisource.agent",
    "intellisource.collector",
    "intellisource.search",
    "intellisource.distributor",
    "intellisource.scheduler",
    "intellisource.api",
]

# Contract 5: API routers must not reach ORM models directly.
# allow_indirect_imports=true so the legitimate router -> repo -> models chain
# does not register as a violation; only DIRECT api.routers.* -> storage.models
# is reported.
[[tool.importlinter.contracts]]
name = "API routers must go through storage.repositories, not storage.models"
type = "forbidden"
source_modules = ["intellisource.api.routers"]
forbidden_modules = ["intellisource.storage.models"]
allow_indirect_imports = true

# Contract 6: Search and Distributor are mutually independent.
[[tool.importlinter.contracts]]
name = "Search and Distributor packages are independent"
type = "independence"
modules = ["intellisource.search", "intellisource.distributor"]

# Contract 7: Source adapters mutually independent.
[[tool.importlinter.contracts]]
name = "Collector source adapters are mutually independent"
type = "independence"
modules = ["intellisource.collector.sources", "intellisource.distributor.channels"]

# Contract 8: Config layer must not depend on storage models.
# allow_indirect_imports=true so the legitimate config -> repo -> models chain
# does not register as a violation; only DIRECT config.* -> storage.models
# is reported.
[[tool.importlinter.contracts]]
name = "Config must not depend on storage.models"
type = "forbidden"
source_modules = ["intellisource.config"]
forbidden_modules = ["intellisource.storage.models"]
allow_indirect_imports = true

# Contract 9: Cross-cutting base layers must not depend upward.
# core / config / observability are excluded from the layered stack (any layer
# may import them), which leaves them unpoliced by the layers contract. This
# guard forbids them from importing business or orchestration packages, so a
# reverse edge such as core -> agent can no longer slip through that blind spot.
[[tool.importlinter.contracts]]
name = "Cross-cutting base must not depend on business or orchestration layers"
type = "forbidden"
source_modules = [
    "intellisource.core",
    "intellisource.config",
    "intellisource.observability",
]
forbidden_modules = [
    "intellisource.main",
    "intellisource.cli",
    "intellisource.api",
    "intellisource.composition",
    "intellisource.agent",
    "intellisource.pipeline",
    "intellisource.collector",
    "intellisource.search",
    "intellisource.distributor",
    "intellisource.scheduler",
    "intellisource.llm",
]
allow_indirect_imports = true
